tools/tests/errors/surf_lib_02.ki
# An unterminated JSON array must be a parse error.
var j = import("json")
discard j.loads("[1, 2, 3")
